[package]
name = "sigma"
version = "0.0.0" # remember to update this when it's ready to release
license = "MIT"
description = "Sigma σ is a Simple, Safe and Fast Template language"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
repository = "https://github.com/shekohex/sigma.git"
keywords = ["template", "sigma"]
edition = "2018"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
