[package]
name = "sigma"
version = "0.1.0" # remember to update this when it's ready to release
license = "MIT"
description = "Sigma σ is a Simple, Safe and Fast Template language"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
repository = "https://github.com/shekohex/sigma.git"
keywords = ["template", "sigma"]
edition = "2018"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
strsim = "0.8.0"
regex = "1.1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "small_data"
harness = false